config/recipes/elastic-agent/fleet-kubernetes-integration-nonroot.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: manage-agent-hostpath-permissions
spec:
  selector:
    matchLabels:
      name: manage-agent-hostpath-permissions
  template:
    metadata:
      labels:
        name: manage-agent-hostpath-permissions
    spec:
      # This is only required when running in an SELinux-enabled/OpenShift environment.
      # Ensure this user has been added to the privileged scc in the correct namespace.
      # oc adm policy add-scc-to-user privileged -z elastic-agent -n elastic-apps
      # serviceAccountName: elastic-agent
      volumes:
        - hostPath:
            path: /var/lib/elastic-agent
            type: DirectoryOrCreate
          name: "agent-data"
      containers:
        - name: pause
          image: gcr.io/google-containers/pause-amd64:3.1
