config/recipes/elastic-agent/fleet-apm-integration.yaml
apiVersion: v1
kind: Service
metadata:
  name: apm
spec:
  selector:
    agent.k8s.elastic.co/name: elastic-agent
  ports:
  - name: apm
    protocol: TCP
    port: 8200
    targetPort: 8200
