config/recipes/elastic-agent/fleet-ingress-setup.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elastic-ingress
  annotations:
    # Disable HTTP traffic
    kubernetes.io/ingress.allow-http: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/proxy-ssl-verify: "off"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    # Depending on the ingress implementation in your environment you may need to specify the ingress class
    # kubernetes.io/ingress.class: "example"
spec:
  # or alternatively use the ingressClassName field. Consult the documentation of your ingress controller.
  # ingressClassName: example
  tls:
    # The assumption here is that these are certificates that are trusted both by agents outside the cluster as well as 
    # as inside. See the comments in the Agent spec below for more details.
    - hosts: ["fleet.example.com"]
      secretName: fleet-server-acme 
    - hosts: ["es.example.com"]
      secretName: es-acme
    - hosts: ["kb.example.com"]
      secretName: kb-acme
  rules:
    - host: "kb.example.com"
      http:
        paths:
        - path: "/"
          pathType: Prefix
          backend:
            service:
              name: kibana-kb-http
              port:
                number: 5601
    - host: "es.example.com"
      http:
        paths:
        - path: "/"
          pathType: Prefix
          backend:
            service:
              name: elasticsearch-es-http
              port:
                number: 9200
    - host: "fleet.example.com"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: fleet-server-agent-http
                port:
                  number: 8220
